[package]
name = "ibkr-algo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.4.3"
crossbeam = "0.8.2"
log = "0.4.17"
time = {version = "0.3.17", features = ["formatting", "macros", "local-offset", "parsing"]}
time-tz = "1.0.2"

[dev-dependencies]
anyhow = "1.0.66"
clap = "4.1.8"
env_logger = "0.9.3"
pretty_assertions = "1"